# waver

./: .gitignore  Cargo.toml  FRONTEND_REVIEW.md  LICENSE-MIT  MANUAL_QA.md  README.md  WAVER_AUDIT.md  WAVER_QOL.md  WAVER_REDESIGN.md  deny.toml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/waver-core/: Cargo.toml
crates/waver-core/src/: edit.rs  engine.rs  lib.rs  model.rs
crates/waver-engine/: Cargo.toml
crates/waver-engine/examples/: loopback_analyze.rs
crates/waver-engine/src/: analyze.rs  capture.rs  enumerate.rs  export.rs  import.rs  input.rs  lib.rs  meter.rs  metering.rs  mixer.rs  peaks.rs  playback.rs
crates/waver-engine/tests/: input_live.rs  metering_live.rs  playback_live.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/audio/: api.ts  files.ts  peaks.ts  project.ts  types.ts  useAudio.ts  useProject.ts  useTransport.ts
src/components/: AudioControls.tsx  DeviceSelector.tsx  FileBar.tsx  MediaPool.tsx  Meter.tsx  Recorder.tsx  WaveformTimeline.tsx  icons.tsx
src/components/timeline/: ContextMenu.tsx  Inspector.tsx  MasterMeter.tsx  TrackHeaders.tsx  renderer.ts
src/styles/: tokens.css
