[package]
name = "waver"
version = { workspace = true }
description = "Waver — a non-destructive audio recorder and multitrack clip editor"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
# The desktop app is never published to crates.io.
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (needed on Windows,
# see https://github.com/rust-lang/cargo/issues/8519).
name = "waver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
waver-core = { path = "../crates/waver-core" }
waver-engine = { path = "../crates/waver-engine" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
