[package]
name = "waver-engine"
description = "Waver native audio engine (cpal-backed AudioEngine implementation)"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
# Internal crate; not published to crates.io in v1.
publish = false

[lib]
name = "waver_engine"

[dependencies]
waver-core = { path = "../waver-core" }
cpal = { workspace = true }
rtrb = { workspace = true }
hound = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
flacenc = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
audiopus = "0.2.0"
ogg = "0.9.2"

# LAME and libvorbis build through autotools/configure, which Windows CI runners
# cannot run - MP3 and OGG(Vorbis) export are desktop-Unix only until vendored
# differently. Opus (cmake) and WAV/FLAC (pure Rust) ship everywhere.
[target.'cfg(not(windows))'.dependencies]
mp3lame-encoder = "0.2.4"
vorbis_rs.workspace = true

[dev-dependencies]
claxon = "0.4"
